Enabled tracking of last access time for bootscript and cloud-init (user-data) resources.
